# ChangeLog for sci-libs/armadillo
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  10 Sep 2015; Marius Brehler <marbre@linux.sungazer.de>
  -armadillo-5.100.2.ebuild, -armadillo-5.200.2-r1.ebuild:
  sci-libs/armadillo: Remove old: Keep in sync with tree

*armadillo-5.500.2 (08 Sep 2015)

  08 Sep 2015; Marius Brehler <marbre@linux.sungazer.de>
  +armadillo-5.500.2.ebuild:
  sci-libs/armadillo: Yet another version bump

*armadillo-5.400.2 (26 Aug 2015)

  26 Aug 2015; Marius Brehler <marbre@linux.sungazer.de>
  +armadillo-5.400.2.ebuild:
  sci-libs/armadillo: Version bump

  25 Jul 2015; Marius Brehler <marbre@linux.sungazer.de>
  -armadillo-5.200.1.ebuild, -armadillo-5.200.2.ebuild:
  sci-libs/armadillo: Drop old

*armadillo-5.200.2-r1 (25 Jul 2015)

  25 Jul 2015; Marius Brehler <marbre@linux.sungazer.de>
  +armadillo-5.200.2-r1.ebuild, metadata.xml:
  sci-libs/armadillo: Add superlu useflag

  25 Jul 2015; Marius Brehler <marbre@linux.sungazer.de>
  armadillo-5.100.2.ebuild, armadillo-5.200.1.ebuild, armadillo-5.200.2.ebuild:
  sci-libs/armadillo: Fix slots

*armadillo-5.200.2 (20 Jul 2015)

  20 Jul 2015; Marius Brehler <marbre@linux.sungazer.de>
  +armadillo-5.200.2.ebuild:
  sci-libs/armadillo: Version bump

  08 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  sci-libs/armadillo: Updating remote-id in metadata.xml

  26 May 2015; Marius Brehler <marbre@linux.sungazer.de>
  -armadillo-5.000.1.ebuild, -armadillo-5.100.1.ebuild:
  Drop old

*armadillo-5.200.1 (26 May 2015)

  26 May 2015; Marius Brehler <marbre@linux.sungazer.de>
  +armadillo-5.200.1.ebuild:
  Version bump

*armadillo-5.100.2 (12 May 2015)

  12 May 2015; Marius Brehler <marbre@linux.sungazer.de>
  +armadillo-5.100.2.ebuild:
  Version bump

*armadillo-5.100.1 (04 May 2015)

  04 May 2015; Marius Brehler <marbre@linux.sungazer.de>
  +armadillo-5.100.1.ebuild:
  Version bump

*armadillo-5.000.1 (26 Apr 2015)
