@@ -1,3 +1,4 @@
 DIST armadillo-4.650.4.tar.gz 5408567 SHA256 ccc56580ec932ec9beade5679b07ecbed889e9b602866f673d1a05a7692b4bf8 SHA512 a548150ba5484fce35b0bc6023982939946f2f00b733dff2cd5b46101b1c344342061389cb4363cdaa04c5e3cca3278a40febe2ed705316552dd71f841c46037 WHIRLPOOL 331493d8b9c92b9e1908880c6f6510edb12e93193a9ceb77d0b8ce9d0bfb493dc48e590ea949d39c3c19f6fc3b05446b7e00525512e3055be0f907427c28f7d4
 DIST armadillo-5.400.2.tar.gz 5440024 SHA256 d155f50bcdd716e52c5c59ccba88adbedfa406f92b76b9edb7a84bd737dbff84 SHA512 7950040d83faa837dfe968a184ebeb59df139300d6f0a80483f682ed7e26da459335d576f4cb146a66d9f95f8e0dd44f145dbe6ec935de6d77f08c2e646a5c6f WHIRLPOOL ea798c655961270e8b61d0041b4c68216239d0e1ab98dd1782c123aa6e4653b7b1a4d93e07a85593577a2aa027bfc0008d5c9f6fa76e31fa9e0338453adf09c1
 DIST armadillo-5.500.2.tar.gz 5442223 SHA256 a29d964fb879199a2ec06e67d0c33faa704bd493f48ff8d4abe3898baf735d19 SHA512 26d5819dd2349c85e6a1b6a42723ab7647b484afe3cc3896389a80a2d2e69ce2d9938a3e03fcb23019940297554e515dbd8ec154cbb1218fd6dd247661aa838f WHIRLPOOL 27b34795993342e78e2bddfb0b3f695b7c9b2c6c5d0370152d2475c777d6308ea7b05c1bc15a9425ee51cafcd3f7eb127e785fa4e348611bd2cc540b82315ab3
+DIST armadillo-5.600.2.tar.gz 5447327 SHA256 3a4e16f07dddd16313128eb1cab8e2f257d7461bde4a1d277c85181dcd6d1eda SHA512 68801cfcdb0cd9121a61da8d22f85f4fd781238e82b0304e7954a510e42be3da94a534b55640f912fca60c07c38828c3bab6aa4fb0328f73118ac18cd135e030 WHIRLPOOL 0e7dfff990526596fe05efe5280da0b7b60f3f2eecf98f81033b71ebaeb82fb7f243819ce7797ddcdf3290a7a810009caacaf69a1a31380bf2f013379a71917e
