@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*armadillo-5.600.2 (21 Sep 2015)
+
+  21 Sep 2015; Marius Brehler <marbre@linux.sungazer.de>
+  +armadillo-5.600.2.ebuild:
+  sci-libs/armadillo: Version bump
+
   10 Sep 2015; Marius Brehler <marbre@linux.sungazer.de>
   -armadillo-5.100.2.ebuild, -armadillo-5.200.2-r1.ebuild:
   sci-libs/armadillo: Remove old: Keep in sync with tree
